--- a/Version.config
+++ b/Version.config
@@ -1,7 +1,9 @@
 MAJOR=1
 MINOR=6
-#REVISION=1
-#PRERELEASE=b1
+REVISION=1
+#PRERELEASE=
 
+BUILD_NUMBER=1620
+BUILD_VERSION=1620
 
 VERSION="${MAJOR}.${MINOR}${REVISION:+.$REVISION}${PRERELEASE}"
